# Cubby

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: build.yml  codeql-analysis.yml  macos.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CompileOptions.cmake
Sources/: CMakeLists.txt  Test.hpp  logo.hpp  main.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp
src/: main.rs
