[package]
name = "cubby"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Seungoh Han <so.h4ns@gmail.com>",
    "Jaeyong Sung <jaeyong0201@gmail.com>",
    "Seungbin Oh <sboh1214@gmail.com>",
    "Minchurl Shin <minchurl001@gmail.com>"
]
edition = "2021"
description = "Voxel-based MMORPG client using Rust"
repository = "https://github.com/CubbyTeam/Cubby"
readme = "README.md"
keywords = ["game", "mmorpg", "voxel", "client"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4.0"
